# tfl

./: .gitignore  README.md
lab1/: Main  Main.hs  Ordinal.hs  SmtPrint.hs  run.sh
lab1null/: lab1null.cabal
lab1null/src/: Main.hs
lab1null/src/Parser/: Parser.hs
lab1null/src/SMT/: SMT.hs
lab5/: lab5.cabal  out.txt
lab5/src/: Grammar.hs  GraphStack.hs  Main.hs  SLRAnalyzer.hs
lab5/src/Grammar/: Grammar.hs
lab5/src/GraphStack/: GraphStack.hs
lab5/src/SLRAnalyzer/: SLRAnalyzer.hs
lab5/src/TestingUtils/: TestingUtils.hs
lab5/src/Transitions/: Transitions.hs
lab5/testsuite/data/: another-tanya-grammar.txt  clear-grammar.txt  dirty-grammar.txt  new-grammar.txt  tanya-grammar.txt
lab5/testsuite/tests/: GrammarParserTest.hs  GrammarTest.hs  GraphStackTest.hs  SLRAnalyzerTest.hs  TransitionsTest.hs
rk1/: solution.tex
rk2/: 3.dot  solution.tex
