cabal-version:      2.4
name:               lab1null
version:            0.1.0.0

author:             Arseniy Bannikov
maintainer:         bannikovtop@gmail.com

library uma-parser
    exposed-modules: Parser
    build-depends:
          base
        , containers
        , parsec
    hs-source-dirs: src/Parser
    default-language: Haskell2010

library uma-smt
    exposed-modules: SMT
    build-depends:
          base
        , containers
    hs-source-dirs: src/SMT
    default-language: Haskell2010

executable lab1null
    main-is: Main.hs
    build-depends:
          base
        , containers
    hs-source-dirs:   src
    default-language: Haskell2010
