cabal-version:      2.4
name:               lab5
version:            0.1.0.0

author:             Arseniy Bannikov
maintainer:         uma7op@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library uma-graph-stack
  exposed-modules: GraphStack
  other-modules: Grammar
  build-depends:
      base 
    , parsec
    , containers
  hs-source-dirs: src
  default-language: Haskell2010

library uma-slr-analyzer
  exposed-modules: SLRAnalyzer
  other-modules: GraphStack, Grammar
  build-depends:
      base
    , parsec
    , containers
    , uma-graph-stack
  hs-source-dirs: src
  default-language: Haskell2010

library uma-grammar
  exposed-modules: Grammar
  build-depends:
      base
    , parsec
    , containers
  hs-source-dirs: src
  default-language: Haskell2010

executable lab5
  main-is:          Main.hs
  other-modules: GraphStack, SLRAnalyzer, Grammar
  build-depends:
      base
    , parsec
    , containers
    , uma-graph-stack
    , uma-slr-analyzer
  hs-source-dirs:   src
  default-language: Haskell2010

Test-Suite grammar-parser-test
  type: exitcode-stdio-1.0
  main-is: tests/GrammarParserTest.hs
  other-modules: Paths_lab5
  autogen-modules: Paths_lab5
  data-files:
      testsuite/data/clear-grammar.txt
  build-depends: 
      base 
    , test-framework
    , test-framework-hunit
    , HUnit
    , uma-grammar
  hs-source-dirs: testsuite
  default-language: Haskell2010
